--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel/fortify": "^1.27",
         "laravel/framework": "^12.0",
+        "laravel/passport": "^13.0",
+        "laravel/telescope": "^5.10",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
