--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.2",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -26,6 +27,7 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
+    "ultracite": "5.1.1",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
