--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,6 +39,7 @@
 		"react": "^19.0.0",
 		"react-day-picker": "^9.8.1",
 		"react-dom": "^19.0.0",
+		"react-markdown": "^10.1.0",
 		"react-store": "link:@tanstack/store/react-store",
 		"recharts": "2.15.4",
 		"sonner": "^2.0.6",
