feat: Update API configuration to support PHP 8.4 with additional extensions
- Modified the API configuration in `config.yaml` to upgrade the PHP version from 8.2 to 8.4.
- Added several PHP extensions including apcu, sodium, xsl, pdo_pgsql, redis, mbstring, gd, exif, fileinfo, and iconv to enhance functionality and performance.

These changes ensure compatibility with the latest PHP features and improve the application's capabilities.

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -2,7 +2,19 @@ applications:
   api:
     source:
       root: "/api"
-    type: "php:8.2"
+    stack:
+      - "php@8.4":
+        extensions:
+          - apcu
+          - sodium
+          - xsl
+          - pdo_pgsql
+          - redis
+          - mbstring
+          - gd
+          - exif
+          - fileinfo
+          - iconv
     relationships:
       database: "postgresql:postgresql"
       redis: "redis:redis"
