chore: Update database connection configuration in environment file
- Added a new environment variable `DB_CONNECTION` to the `.environment` file, setting it to the value of `DATABASE_SCHEME`.
- This change improves the database connection setup for the API, ensuring proper configuration for database interactions.

--- a/api/.environment
+++ b/api/.environment
@@ -14,6 +14,7 @@ export LOG_STACK="single"
 export LOG_DEPRECATIONS_CHANNEL="null"
 export LOG_LEVEL="debug"
 
+export DB_CONNECTION="${DATABASE_SCHEME}"
 export DB_HOST="${DATABASE_HOST}"
 export DB_PORT="${DATABASE_PORT}"
 export DB_PATH="${DATABASE_PATH}"
