chore: Update web start command in Upsun configuration
- Changed the web start command in `.upsun/config.yaml` from `npx next start -p $PORT` to `npm run start`.
- This update simplifies the command for starting the web application, ensuring consistency with other project scripts.

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -64,7 +64,7 @@ applications:
         npm run build
     web:
       commands:
-        start: "npx next start -p $PORT"
+        start: "npm run start"
       upstream:
         socket_family: tcp
       locations:
