chore: Update database environment variables in configuration
- Replaced `DB_PATH` with `DB_DATABASE` in the `.environment` file to better reflect its purpose.
- Removed unused `DB_SCHEME` and `DATABASE_URL` variables, streamlining the database configuration for clarity and efficiency.

--- a/api/.environment
+++ b/api/.environment
@@ -17,11 +17,9 @@ export LOG_LEVEL="debug"
 export DB_CONNECTION="${DATABASE_SCHEME}"
 export DB_HOST="${DATABASE_HOST}"
 export DB_PORT="${DATABASE_PORT}"
-export DB_PATH="${DATABASE_PATH}"
+export DB_DATABASE="${DATABASE_PATH}"
 export DB_USERNAME="${DATABASE_USERNAME}"
 export DB_PASSWORD="${DATABASE_PASSWORD}"
-export DB_SCHEME="${DATABASE_SCHEME}"
-export DATABASE_URL="${DATABASE_SCHEME}://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_PATH}"
 
 export SESSION_DRIVER="redis"
 export SESSION_LIFETIME="120"
