chore: Update APP_URL configuration in environment file
- Modified the `APP_URL` variable in the `.environment` file to dynamically set its value based on the decoded `PLATFORM_ROUTES`, specifically selecting the production URL for the API.
- This change enhances the configuration by ensuring the correct URL is used for the API environment.

--- a/api/.environment
+++ b/api/.environment
@@ -1,5 +1,5 @@
 #APP_URL=http://api.lifebuffer.test
-
+export APP_URL="$(echo $PLATFORM_ROUTES | base64 --decode | jq '.[] | select(.upstream == "api") | .production_url')"
 export APP_LOCALE="en"
 export APP_FALLBACK_LOCALE="en"
 export APP_FAKER_LOCALE="en_US"
