chore: Update Upsun configuration for routing and document root
- Changed the document root in `.upsun/config.yaml` from `api/public` to `public` to align with the project structure.
- Added new redirect routes for both `http://app.{default}/` and `http://api.{default}/` to ensure proper HTTPS redirection, enhancing security and user experience.

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -33,7 +33,7 @@ applications:
       locations:
         "/":
           passthru: "/index.php"
-          root: "api/public"
+          root: "public"
     build:
       flavor: none
     hooks:
@@ -85,3 +85,9 @@ routes:
   "https://api.{default}/":
     type: upstream
     upstream: "api:http"
+  "http://app.{default}/":
+    type: redirect
+    to: "https://app.{default}/"
+  "http://api.{default}/":
+    type: redirect
+    to: "https://api.{default}/"
