chore: Add session security settings to environment configuration
- Introduced `SESSION_SECURE_COOKIE` and `SESSION_SAME_SITE` variables in the `.environment` file to enhance session security and control cookie behavior.

--- a/api/.environment
+++ b/api/.environment
@@ -25,6 +25,8 @@ export SESSION_DRIVER="redis"
 export SESSION_LIFETIME="120"
 export SESSION_ENCRYPT="false"
 export SESSION_PATH="/"
+export SESSION_SECURE_COOKIE="true"
+export SESSION_SAME_SITE="lax"
 
 export BROADCAST_CONNECTION="redis"
 export FILESYSTEM_DISK="local"
