--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -71,6 +71,33 @@ applications:
         "/":
           root: ""
           passthru: true
+  landing:
+    type: "nodejs:22"
+    build:
+      flavor: none
+    dependencies:
+      nodejs:
+        pnpm: 10.13.1
+    mounts:
+      "/.npm":
+        source: "storage"
+        source_path: "npm"
+      "/.cache":
+        source: "storage"
+        source_path: "cache"
+    hooks:
+      build: |
+        pnpm install
+        pnpm run build
+    web:
+      locations:
+        "/":
+          root: "dist"
+          index: [index.html]
+      commands:
+        start: "sleep infinity"
+      upstream:
+        socket_family: tcp
 services:
   postgresql:
     type: postgresql:17
@@ -91,3 +118,9 @@ routes:
   "http://api.{default}/":
     type: redirect
     to: "https://api.{default}/"
+  "https://{default}/":
+    type: upstream
+    upstream: "landing:http"
+  "http://{default}/":
+    type: redirect
+    to: "https://{default}/"
