feat: Add source root for landing page in Upsun configuration
- Introduced a new `source` root for the landing page in `.upsun/config.yaml`, setting it to `/landing` to align with the project structure and facilitate proper routing.

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -72,6 +72,8 @@ applications:
           root: ""
           passthru: true
   landing:
+    source:
+      root: "/landing"
     type: "nodejs:22"
     build:
       flavor: none
